prevent form jumping when toggling input validations

--- a/addon/styles/g-input.css
+++ b/addon/styles/g-input.css
@@ -29,3 +29,12 @@
 	display: inline-block;
 	border-radius: 50%;
 }
+.g-valid {
+	width: 16px;
+	height: 16px;
+	line-height: 16px;
+	display: inline-block;
+}
+.g-input-invalid {
+	border: 1px solid red;
+}
